bin_PROGRAMS =									\
	agrep										\
	list										\
	pingchecker									\
	uri2uri

agrep_LDADD =									\
	$(RDLIB_LIBS)

agrep_CPPFLAGS =								\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

agrep_SOURCES = agrep.cpp

list_LDADD =									\
	$(RDLIB_LIBS)

list_CPPFLAGS =									\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

list_SOURCES = list.cpp

uri2uri_LDADD =									\
	$(RDLIB_LIBS)

uri2uri_CPPFLAGS =								\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

uri2uri_SOURCES = uri2uri.cpp

pingchecker_LDADD =								\
	$(RDLIB_LIBS)

pingchecker_CPPFLAGS =							\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

pingchecker_SOURCES = pingchecker.cpp

DISTCLEANFILES =
