bin_PROGRAMS =									\
	agrep										\
	imagecheck									\
	imagediff									\
	list										\
	pingchecker									\
	uri2uri										\
	cctvstream

agrep_LDADD =									\
	$(RDLIB_LIBS)

agrep_CPPFLAGS =								\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

agrep_SOURCES = agrep.cpp

list_LDADD =									\
	$(RDLIB_LIBS)

list_CPPFLAGS =									\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

list_SOURCES = list.cpp

uri2uri_LDADD =									\
	$(RDLIB_LIBS)

uri2uri_CPPFLAGS =								\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

uri2uri_SOURCES = uri2uri.cpp

pingchecker_LDADD =								\
	$(RDLIB_LIBS)

pingchecker_CPPFLAGS =							\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

pingchecker_SOURCES = pingchecker.cpp

imagediff_LDADD =								\
	$(RDLIB_LIBS)

imagediff_CPPFLAGS =							\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

imagediff_SOURCES = imagediff.cpp ImageDiffer.cpp

imagecheck_LDADD =								\
	$(RDLIB_LIBS)

imagecheck_CPPFLAGS =							\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

imagecheck_SOURCES = imagecheck.cpp

cctvstream_LDADD =								\
	$(RDLIB_LIBS)

cctvstream_CPPFLAGS =							\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

cctvstream_SOURCES = cctvstream.cpp CameraStream.cpp MotionDetector.cpp

DISTCLEANFILES =
