bin_PROGRAMS =									\
	agrep										\
	cmdsender									\
	cmdserver									\
	imagediff									\
	list										\
	uri2uri

agrep_LDADD =									\
	$(RDLIB_LIBS)

agrep_CPPFLAGS =								\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

agrep_SOURCES = agrep.cpp

list_LDADD =									\
	$(RDLIB_LIBS)

list_CPPFLAGS =									\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

list_SOURCES = list.cpp

uri2uri_LDADD =									\
	$(RDLIB_LIBS)

uri2uri_CPPFLAGS =								\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

uri2uri_SOURCES = uri2uri.cpp

imagediff_LDADD =								\
	$(RDLIB_LIBS)

imagediff_CPPFLAGS =							\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

imagediff_SOURCES = imagediff.cpp ImageDiffer.cpp

cmdsender_LDADD =								\
	$(RDLIB_LIBS)

cmdsender_CPPFLAGS =							\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

cmdsender_SOURCES = cmdsender.cpp

cmdserver_LDADD =								\
	$(RDLIB_LIBS)

cmdserver_CPPFLAGS =							\
	$(RDLIB_CFLAGS)								\
	$(RDUTILS_CFLAGS)

cmdserver_SOURCES = cmdserver.cpp

DISTCLEANFILES =
